# umrt-serial-cam-ros

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  mainpage.dox  package.in.xml  setup.cfg  setup.py
.github/workflows/: doxygen-gh-pages.yml  ros-build.yaml  semver.yaml
config/: cam_params.yaml  encoder_manager.yaml  encoder_params.yaml
include/project-name/: example_node.hpp
include/umrt-serial-cam-ros/: encoder_manager_node.hpp
launch/: base.launch.py  camera.launch.py  decode.launch.py  encode.launch.py  example.launch.py  example.yaml  robot.launch.py
src/: encoder_manager.cpp  encoder_manager_node.cpp  example_node.cpp  project_name.cpp
umrt_serial_cam_ros/: encoder_manager_node.py
